..F....... [ZBX-5180] maintenance periods form redesign (Vedmak)
.......PS. [ZBXNEXT-1335] pingers work without connection to a database (Sasha)
..F....... [ZBX-5127] regular expressions form redesign (Vedmak)
........S. [ZBXNEXT-1663] added support for notification macros {TRIGGER.NAME.ORIG}, {ITEM.NAME.ORIG}, {ITEM.KEY.ORIG} (dimir)

Bug fixes:
..F....... [ZBX-6693] improved groups and hosts filter in available report, slide shows and screen monitoring pages (Eduard)
..F....... [ZBX-6662] fixed acknowledged message count for problem events in dashboard "system status" block (Eduard)
..F....... [ZBX-6471] fixed action operations step ordering (Ivo)
A......... [ZBX-6361] fixed proxy interface creating through Proxy API (Eduard)
A......... [ZBX-6651] fixed template name for duplicate items in validation message (Eduard)
..F....... [ZBX-6268] removed links from inactive subfilter items in item list (Eduard)
A......... [ZBX-6446] removed unused getObjects() method from Script API (Eduard)
..F....... [ZBX-6710] fixed item list display after item deletion (Ivo)
..F....... [ZBX-6718] fixed "placeholder" attribute for IE9 (Ivo)
A......... [ZBX-6399] fixed map element linking (Eduard)
..F....... [ZBX-6447] fixed time control start time calculation filter in Administration -> Audit (Eduard)
A.F....... [ZBX-6678] added write permission check in graphs and graph prototypes for Y axis MIN/MAX items (Ivo)
..F....... [ZBX-5672] fixed horizontal grid and Y axis for graphs (Oleg)
..F....... [ZBX-6692] fixed displaying age and last change in monitoring triggers page (Ivo)
..F....... [ZBX-5711] fixed favorites not being added in dashboard (Toms)
..F....... [ZBX-4620] added escaping of HTML entities for search results as well for item and trigger pages (Toms)
..F....... [ZBX-4620] fixed inability to unset sub-filters in item configuration list (Toms)
..F....... [ZBX-5620] fixed layout of edit forms (Eduard)