@@ -348,6 +348,8 @@ $table = new CTableInfo(_('No events defined.'));
 
 // trigger events
 if ($source == EVENT_OBJECT_TRIGGER) {
+	$sourceName = 'trigger';
+
 	$firstEvent = API::Event()->get(array(
 		'output' => API_OUTPUT_EXTEND,
 		'objectids' => !empty($_REQUEST['triggerid']) ? $_REQUEST['triggerid'] : null,
@@ -360,6 +362,8 @@ if ($source == EVENT_OBJECT_TRIGGER) {
 
 // discovery events
 else {
+	$sourceName = 'discovery';
+
 	$firstEvent = API::Event()->get(array(
 		'output' => API_OUTPUT_EXTEND,
 		'source' => EVENT_SOURCE_DISCOVERY,
@@ -385,7 +389,14 @@ else {
 	}
 }
 
-$_REQUEST['period'] = get_request('period', SEC_PER_WEEK);
+if (isset($_REQUEST['period'])) {
+	$_REQUEST['period'] = get_request('period', ZBX_PERIOD_DEFAULT);
+	CProfile::update('web.events.'.$sourceName.'.period', $_REQUEST['period'], PROFILE_TYPE_INT);
+}
+else {
+	$_REQUEST['period'] = CProfile::get('web.events.'.$sourceName.'.period');
+}
+
 $effectiveperiod = navigation_bar_calc();
 $from = zbxDateToTime($_REQUEST['stime']);
 $till = $from + $effectiveperiod;
