@@ -75,6 +75,7 @@ A.F.I...S. [ZBXNEXT-1186] increased length to 2048 characters of expression fiel
 ........S. [ZBXNEXT-1663] added support for notification macros {TRIGGER.NAME.ORIG}, {ITEM.NAME.ORIG}, {ITEM.KEY.ORIG} (dimir)
 
 Bug fixes:
+..F....... [ZBX-6748] fixed event filter period resetting (Ivo)
 ..F....... [ZBX-6693] improved groups and hosts filter in available report, slide shows and screen monitoring pages (Eduard)
 ..F....... [ZBX-6662] fixed acknowledged message count for problem events in dashboard "system status" block (Eduard)
 ..F....... [ZBX-6471] fixed action operations step ordering (Ivo)
